--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "bitshow",
+  "name": "myIMDb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://srkinator.github.io/MyIMDb/",
   "dependencies": {
     "axios": "^0.17.1",
     "bootstrap": "^3.3.7",
@@ -14,6 +15,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
+  "devDependencies": {
+    "gh-pages": "^0.11.0"
   }
 }
